# nlp2llm

./: .gitignore  README.md  pyproject.toml
notebooks/basics/: 2_sequences_basics.ipynb  3_basics_sarcasm_data.ipynb  building_a_vocab.ipynb  sequences_basics.ipynb
