[tool.poetry]
name = "nlp2llm"
version = "0.1.0"
description = "Learning NLP and LLM"
authors = ["ppkhairn <ppkhairn@mtu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.12.0"
torch = {version = "2.0.1", source = "pytorch-cpu"}
torchvision = {version = "0.15.2", source = "pytorch-cpu"}
torchtext = {version = "0.15.2", source = "pytorch-cpu"}
absl-py = "^2.3.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
